Fix: stretching of the image in the CardProviderSmall

--- a/src/components/cards/CardProviderSmall/card-provider-small.scss
+++ b/src/components/cards/CardProviderSmall/card-provider-small.scss
@@ -16,6 +16,7 @@
     border-radius: $border_radius_2_4;
     width: 8rem;
     height: 8rem;
+    object-fit: cover;
   }
 
   &__information {
